Amarok ChangeLog
================
(C) 2002-2011 the Amarok authors.

Version 2.5
  FEATURES:
    * Now It's possible to use formated strings for prefix and suffix in 
      Playlist's layout items.

  BUGFIXES:
    * Fix crash at exit with Qt 4.8
    * Fix moving applets rightward in the context toolbar.
    * Fix breadcrumbs not working properly for the file browser.
    * Disable cover fetching action for tracks not in the collection to avoid
      crash when trying to "save as" a cover. (BR 287604)
    * Show default cover in tag dialog when track is not in the collection.
    * Fix directory selection when opening album location in tag dialog.
    * Fix crash in CoverFoundDialog if progress dialog is cancelled just
      before fetch is done.
    * Correctly parse disambiguation pages for songs in the English Wikipedia. (BR 270054)
    * Fix wrong context view applets sizes on start up in some cases.
    * Fix Amarok consuming CPU until main window is shown. (BR 278897)
    * Fix last.fm 'scrobble composer' option's fallback to artist (BR 286215)
    * Fix volume control from within Amarok.
    * Fix slow startup because of imported playlists. (BR 284761)
    * Fix audio CD detection on Amarok start. (BR 276032)
    * Set a default filename scheme for USB Mass Storage (BR 285900)
    * Fixed crash during MusicBrainz search. (BR 277475)

  CHANGES:
    * Load Last.fm friend/neighbour avatars on demand.
    * Update tracks in the recently played widget only when needed.
    * Allow editing the SearchWidget during a search animation.
    * Update the collection view while UMS is scanning.
    * Don't block the UI while scanning UMS device.
    * Allow going back and forward in Amazon store. Thanks to GCI student Nikola Miljkovic.

Version 2.5.0-Beta 1
  FEATURES:
    * New "equals" match in collection filter - e.g. label:=pop finds songs
      with label "pop" but not songs with label "electro pop". (BR 260004)