@@ -8,6 +8,8 @@ Version 2.5
       Playlist's layout items.
 
   BUGFIXES:
+    * Fix collection info display (track count, free space) for iPod and MTP
+      devices. (BR 232093)
     * Fix crash at exit with Qt 4.8
     * Fix moving applets rightward in the context toolbar.
     * Fix breadcrumbs not working properly for the file browser.
